# HealthCareWebApi/HealthCareWebApi/Controllers/MedicineController.cs
@@ -150,29 +150,29 @@ namespace HealthCareWebApi.Controllers
         }
 
 
-        [Route("SaveFile")]
-        [HttpPost]
-        public JsonResult SaveFile()
-        {
-            try
-            {
-                var httpRequest = Request.Form;
-                var postedFile = httpRequest.Files[0];
-                string filename = postedFile.FileName;
-                var physicalPath = _env.ContentRootPath + "/Photos/" + filename;
+        //[Route("SaveFile")]
+        //[HttpPost]
+        //public JsonResult SaveFile()
+        //{
+        //    try
+        //    {
+        //        var httpRequest = Request.Form;
+        //        var postedFile = httpRequest.Files[0];
+        //        string filename = postedFile.FileName;
+        //        var physicalPath = _env.ContentRootPath + "/Photos/" + filename;
 
-                using (var stream = new FileStream(physicalPath, FileMode.Create))
-                {
-                    postedFile.CopyTo(stream);
-                }
+        //        using (var stream = new FileStream(physicalPath, FileMode.Create))
+        //        {
+        //            postedFile.CopyTo(stream);
+        //        }
 
-                return new JsonResult(filename);
-            }
-            catch (Exception)
-            {
+        //        return new JsonResult(filename);
+        //    }
+        //    catch (Exception)
+        //    {
 
-                return new JsonResult("anonymous.png");
-            }
-        }
+        //        return new JsonResult("anonymous.png");
+        //    }
+        //}
     }
 }
