# HealthCareWebApi/HealthCareWebApi/Controllers/UserController.cs
@@ -1,0 +1,79 @@
+﻿using HealthCareWebApi.Models;
+using Microsoft.AspNetCore.Http;
+using Microsoft.AspNetCore.Mvc;
+using System.Data.SqlClient;
+using System.Data;
+
+namespace HealthCareWebApi.Controllers
+{
+    [Route("[controller]")]
+    [ApiController]
+    public class UserController : ControllerBase
+    {
+        private readonly IConfiguration _configuration;
+        private readonly IWebHostEnvironment _env;
+        public UserController(IConfiguration configuration, IWebHostEnvironment env)
+        {
+            _configuration = configuration;
+            _env = env;
+        }
+
+        [HttpGet(Name = "GetUser")]
+        public JsonResult Get()
+        {
+            string query = @"
+                            select UserName, Password , EmailID, Mobile
+                            from dbo.Users;
+                            ";
+
+            DataTable table = new DataTable();
+            string sqlDataSource = _configuration.GetConnectionString("EmployeeAppCon");
+            SqlDataReader myReader;
+            using (SqlConnection myCon = new SqlConnection(sqlDataSource))
+            {
+                myCon.Open();
+                using (SqlCommand myCommand = new SqlCommand(query, myCon))
+                {
+                    myReader = myCommand.ExecuteReader();
+                    table.Load(myReader);
+                    myReader.Close();
+                    myCon.Close();
+                }
+            }
+
+            return new JsonResult(table);
+        }
+
+        [HttpPost(Name = "PostUser")]
+        public JsonResult Post(User u)
+        {
+            string query = @"
+                           insert into dbo.Users
+                           ( UserName, Password , EmailID, Mobile)
+                    values ( @UserName, @Password , @EmailID, @Mobile);
+                            ";
+
+            DataTable table = new DataTable();
+            string sqlDataSource = _configuration.GetConnectionString("EmployeeAppCon");
+            SqlDataReader myReader;
+            using (SqlConnection myCon = new SqlConnection(sqlDataSource))
+            {
+                myCon.Open();
+                using (SqlCommand myCommand = new SqlCommand(query, myCon))
+                {
+                    myCommand.Parameters.AddWithValue("@UserName", u.UserName);
+                    myCommand.Parameters.AddWithValue("@EmailID", u.EmailID);
+                    myCommand.Parameters.AddWithValue("@Password", u.Password);
+                    myCommand.Parameters.AddWithValue("@Mobile", u.Mobile);
+                    myReader = myCommand.ExecuteReader();
+                    table.Load(myReader);
+                    myReader.Close();
+                    myCon.Close();
+                }
+            }
+
+            return new JsonResult("Added Successfully");
+        }
+
+    }
+}
