# HealthCareWebApi/HealthCareWebApi/Models/User.cs
@@ -1,0 +1,13 @@
+﻿using System.Numerics;
+
+namespace HealthCareWebApi.Models
+{
+    public class User
+    {       
+        public string? Mobile { get; set; }
+        public string? UserName { get; set; }
+        public string? Password { get; set; }
+        public string? EmailID { get; set; }
+
+    }
+}
